--- a/style.css
+++ b/style.css
@@ -173,6 +173,12 @@ section.grid-container2 {
   font-size: 40px;
 }
 
+.BTTT   {
+  font-size: 14px;
+  color: rgb(47, 45, 58);
+  text-decoration: none;
+}
+
 .HoriseonContainer {
   position: relative;
   width: 100%;
@@ -188,8 +194,8 @@ section.grid-container2 {
 
 .HoriseonContainer .HBtn {
   position: absolute;
-  top: 81%;
-  left: 90px;
+  top: 77%;
+  left: 100px;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: rgba(0, 247, 251, 0.902);
@@ -204,6 +210,14 @@ section.grid-container2 {
 
 .smaller    {
   font-size: 14px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
+
+.larger   {
+  font-size: 18px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
 }
 
 .portfolioContainer {
@@ -222,7 +236,7 @@ section.grid-container2 {
 .portfolioContainer .PoBtn {
   position: absolute;
   top: 50%;
-  left: 105px;
+  left: 120px;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: rgba(0, 247, 251, 0.902);
@@ -237,6 +251,14 @@ section.grid-container2 {
 
 .smaller    {
   font-size: 14px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
+
+.larger   {
+  font-size: 18px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
 }
 
 .passwordContainer {
@@ -255,6 +277,47 @@ section.grid-container2 {
 .passwordContainer .PassBtn {
   position: absolute;
   top: 50%;
+  left: 115px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: rgba(0, 247, 251, 0.902);
+  color: rgb(47, 45, 58);
+  font-size: 20px;
+  font-weight: bold;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+}
+
+.smaller    {
+  font-size: 14px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
+
+.larger   {
+  font-size: 18px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
+
+.codeQuizContainer {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+
+/* Make the image responsive */
+.codeQuizContainer img {
+  width: 100%;
+  height: auto;
+  border: 5px solid rgba(0, 247, 251, 0.902);
+}
+
+.codeQuizContainer .codeQuizBtn {
+  position: absolute;
+  top: 55%;
   left: 105px;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -270,13 +333,55 @@ section.grid-container2 {
 
 .smaller    {
   font-size: 14px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
 }
 
+.larger   {
+  font-size: 18px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
+.schedulerContainer {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
 
+/* Make the image responsive */
+.schedulerContainer img {
+  width: 100%;
+  height: 305px;
+  border: 5px solid rgba(0, 247, 251, 0.902);
+}
 
+.schedulerContainer .schedulerBtn {
+  position: absolute;
+  top: 55%;
+  left: 115px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: rgba(0, 247, 251, 0.902);
+  color: rgb(47, 45, 58);
+  font-size: 20px;
+  font-weight: bold;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+}
 
+.smaller    {
+  font-size: 14px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
 
-
+.larger   {
+  font-size: 18px;
+  color:rgb(47, 45, 58);
+  text-decoration: none;
+}
 
 footer.grid-container3 {
   display: grid;
@@ -296,7 +401,11 @@ footer.grid-container3 {
 
 #f1, #f2    {
   text-align: center;
-  padding-top: 30px;;
+  padding-top: 30px;
+  line-height: 1.5;
+  color: rgb(47, 45, 58);
+  font-weight: bold;
+  font-size: 18px;
 }
 
   /* Responsive layout - makes a two column-layout instead of four columns */
