--- a/style.css
+++ b/style.css
@@ -35,13 +35,13 @@ header  {
   }
   
 .homelogo {
+      display: flex;
       flex-direction:row;
-      flex-wrap: wrap;
-      justify-content: flex-end;
-      padding-left: 20px;
-      padding-right: 20px;
+      justify-content: flex-start;
+      padding-left: 10px;
+      padding-right: 10px;
       padding-top: 5px;
-      padding-bottom: 10px;
+      padding-bottom: 5px;
       margin-left: 20px;
       margin-right: 20px;
       margin-bottom: 10px;
@@ -52,6 +52,12 @@ header  {
       font-weight: bold;
   }
   
+.JBPic    {
+  margin-left: 30px;
+  width: 60px;
+  height: 70px;
+}
+
 .homenav:link {
     text-decoration: none;
     color: rgb(47, 45, 58);
